# python-calculator

./: README.md  pyproject.toml  run.py
src/calc/: __init__.py  calculator.py  gui.py  test_calculator.py
