[project]
name = "calc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0",
]

[project.scripts]
calc = "calc:main"
test = "pytest:main"  # allows running tests with 'python -m calc.test'
mycalc = "calc:mycalc"  # new entry for the calculator demo
calcgui = "calc:gui"  # Changed from calc-gui to calcgui (no hyphen)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = "test_*.py"
pythonpath = ["src"]
